--- a/src/AppointmentSystem.Web/App.razor
+++ b/src/AppointmentSystem.Web/App.razor
@@ -1,6 +1,7 @@
 ﻿<MudThemeProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
+<MudPopoverProvider />
 
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
