--- a/src/AppointmentSystem.Web/Components/AppointmentDetailDialog.razor
+++ b/src/AppointmentSystem.Web/Components/AppointmentDetailDialog.razor
@@ -1,4 +1,5 @@
 @using MudBlazor
+@using AppointmentSystem.Domain.Entities
 @using AppointmentSystem.Application.DTOs
 @using AppointmentSystem.Application.Services
 @using Microsoft.AspNetCore.Components
