login signup section added and database updated

--- a/src/AppointmentSystem.Web/App.razor
+++ b/src/AppointmentSystem.Web/App.razor
@@ -2,6 +2,7 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 <MudPopoverProvider />
+<AuthInitializer />
 
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
